# 2prestashop

./: .gitignore  Cargo.toml  inventario_busqueda_flexible_v2b.sql  inventario_busqueda_flexible_v2dConListasPrecios.sql  main.rs  movimientos.csv  stock_auditoria_20260619_110012.csv  sync_config.env
src/: main.rs  main.rs.bak_  main.rs.bak_20260614_005930
