[package]
name = "mercaboy_stock_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "net", "io-util"] }
mysql_async = { version = "0.34", default-features = false, features = ["minimal"] }
tiberius = { version = "0.12", default-features = false, features = ["chrono", "rustls", "tds73"] }
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", features = ["clock"] }
futures-util = "0.3"
